// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Deprecated should ignore mode="combobox" 1`] = `
<div
  class="ant-select ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select Select Custom Icons should support customized icons 1`] = `
<div
  class="ant-select ant-select-single ant-select-show-arrow"
  count="10"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Select rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-select-rtl ant-select-single ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;
